tambah swag
